data/derived/comb/progs/unify/prog5864.ml.out
Characters 118-120:
  | Cosine e1            -> cos e1
                                ^^
Error: This expression has type expr but an expression was expected of type
         float
